# Mini-Audio-Editor-Suite

./: .gitignore  CMakeLists.txt  README.md
include/audio/: AudioBuffer.h  AudioEffect.h  AudioFileLoader.h  AudioPlayer.h  GainEffect.h
include/ui/: Application.h  WaveformView.h  Window.h
src/: main.cpp
src/audio/: AudioBuffer.cpp  AudioFileLoader.cpp  AudioPlayer.cpp  GainEffect.cpp
src/ui/: Application.cpp  WaveformView.cpp  Window.cpp
tests/: CMakeLists.txt  test_audio_buffer.cpp  test_gain_effect.cpp  test_main.cpp  test_waveform_view.cpp  test_window.cpp
